# Perception-Pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client.py  main.cpp  pyhelper.hpp  requirements.txt  requirements2.txt  sarl.py
Benchmark/BlurBody/: deepsort.txt
Benchmark/Human3/: deepsort.txt
Benchmark/Human6/: deepsort.txt
Benchmark/Human9/: deepsort.txt
Benchmark/Loomo/Demo1/: video.avi
Benchmark/Loomo/Demo2/: video.avi
Benchmark/Loomo/Demo3/: theo_Indoor.avi
DLAV-2022/: README.md
DLAV-2022/homeworks/hw1/: Exercise 4_Linear_Regression.ipynb
DLAV-2022/homeworks/hw1/solutions/: Exercise 4_Linear_Regression_Solution.ipynb
DLAV-2022/homeworks/hw2/: Evaluator.ipynb
DLAV-2022/homeworks/hw3/: Evaluator.ipynb
DLAV-2022/projects/loomo/: client.py  detector.py
cpp/: CMakeLists.txt  SampleClient.cpp  SampleServer.cpp  compile_socket.sh
python/: .gitignore  .run.sh.swp  README.md  ReID.py  ReadMe.md  benchmark.sh  client.py  client_yolo.py  detector.py  inference.py  inference_old.py  old_detector.py  program.prof  run.sh  run2.sh  run_tracker_smart.sh  saved_model.pth  setup.py  test.py  test.yaml  testing.py  tracker.py  yolo_torch.py
python/.ipynb_checkpoints/: yolocode-checkpoint.ipynb
python/predictions/: ID_0001_elapsed_time_detector_tracker.txt  ID_0001_prediction.txt  Prediction_ID_0001.txt  Prediction_ID_0001.txt.yaml
python/scripts/: benchmark.py  check_cfg.py  check_clean_tracking_fusing_ReID_and_deepsort.py  check_color_detection.py  check_detection_pifpaf.py  check_fusing_DS_ReID.py  check_perception.py  check_tracking_ReID.py  check_tracking_fusing_ReID_and_deepsort.py  client.py  download_reid_weights.py  download_reid_weights.sh  evaluate.sh  loomo.py  modif_cfg.py  multi_benchmark.sh  program.prof  run.py  test_benchmark.sh  test_det.txt  test_mmtracking.py  time_perf.py  try_save_txt.py  x_check_detection_pifpaf.py
python/src/dlav22/: perception.py
python/src/dlav22/configs/: cfg_detector.yaml  cfg_perception.yaml  cfg_tracker.yaml
python/src/dlav22/deep_sort/: custom_feature_extractor.py  deep_sort.py
python/src/dlav22/detectors/: README.md  color_detector.py  custom_detectors.py  final_detector.py  pifpaf_detectors.py  pose_detectors.py  pose_yolo_detector.py  (+1 more)
python/test/: pretrained_weights.py  test_pifpaf_pose_detector.py  test_utils.py
python/theo/: benchmark.sh  client.py  client_yolo.py  demo.sh  detector.py  run2.sh  run_tracker_smart.sh  run_yolo+tracker.sh  run_yolo.sh  test.py  tracker.py
python/theo/shellscript/: inference_vid.sh  run_tracker_smart.sh  run_yolo+tracker.sh
python/x_old_scripts/: x_check_fusing_ReID_DS.py  x_check_tracking_ReID.py
scripts/: follow.cfg  logAprAlgo.xml  push_config.bat
socket/: CMakeLists.txt  SampleClient.cpp  SampleClient.py  SampleServer.cpp  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h  detector.py  run_server.sh
(+27 files in other folders)
